# pyredsvd

./: CMakeLists.txt  README
cmake/: FindNumpy.cmake
src/: CMakeLists.txt  pyredsvd.pxd  pyredsvd.pyx  redsvd.hpp  redsvdMain.cpp  util.cpp  util.hpp
src/redsvd-core/: CMakeLists.txt  redsvd.hpp  redsvdMain.cpp  util.cpp  util.hpp
